--- a/jenkinsServiceAccount.yaml
+++ b/jenkinsServiceAccount.yaml
@@ -4,9 +4,49 @@ kind: ClusterRole
 metadata:
   name: jenkins-admin-role
 rules: 
-  - apiGroups: [""]
-    resources: ["*"]
-    verbs: ["*"]
+- apiGroups:
+  - '*'
+  resources:
+  - statefulsets
+  - services
+  - replicationcontrollers
+  - replicasets
+  - podtemplates
+  - podsecuritypolicies
+  - pods
+  - pods/log
+  - pods/exec
+  - podpreset
+  - poddisruptionbudget
+  - persistentvolumes
+  - persistentvolumeclaims
+  - jobs
+  - endpoints
+  - deployments
+  - deployments/scale
+  - daemonsets
+  - cronjobs
+  - configmaps
+  - namespaces
+  - events
+  - secrets
+  verbs:
+  - create
+  - get
+  - watch
+  - delete
+  - list
+  - patch
+  - update
+- apiGroups:
+  - ""
+  resources:
+  - nodes
+  verbs:
+  - get
+  - list
+  - watch
+  - update
 
 ---
 apiVersion: v1
